--- a/pom.xml
+++ b/pom.xml
@@ -4,5 +4,5 @@
   <artifactId>TechGuru</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <! hello!>
+  <!--hello--!>
   </project>
